[gd_scene load_steps=6 format=3 uid="uid://mfrb8ssc1gnj"]

[ext_resource type="Script" path="res://Windows/SavingsMenu.gd" id="1_yk0ac"]
[ext_resource type="Texture2D" uid="uid://dylrdm4keq383" path="res://Assets/The Fan-tasy Tileset/Beginning Fields.png" id="2_b5m1q"]
[ext_resource type="FontFile" uid="uid://brd03th58pauo" path="res://Font/Milonga-Regular.ttf" id="3_0pncr"]
[ext_resource type="Theme" uid="uid://dr47g3nytmxkg" path="res://Themes/MainTheme.tres" id="4_myd3u"]

[sub_resource type="LabelSettings" id="LabelSettings_jye8g"]
font = ExtResource("3_0pncr")
font_size = 128
font_color = Color(0.105882, 0.74902, 0, 1)
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="SavingsMenu" type="CanvasLayer"]
script = ExtResource("1_yk0ac")
metadata/_edit_lock_ = true
metadata/_edit_horizontal_guides_ = []

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_b5m1q")
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
offset_left = 672.0
offset_top = 34.0
offset_right = 1248.0
offset_bottom = 198.0
size_flags_horizontal = 4
text = "Savings"
label_settings = SubResource("LabelSettings_jye8g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 40.0
offset_top = 235.0
offset_right = 1840.0
offset_bottom = 935.0
theme_override_constants/separation = 40

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Save" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(430, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_myd3u")
text = "Save"
icon_alignment = 1

[node name="Load" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(430, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_myd3u")
text = "Load"
icon_alignment = 1

[node name="Delete" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(430, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_myd3u")
text = "Delete"
icon_alignment = 1

[node name="Panel" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_myd3u")

[node name="Saves" type="ScrollContainer" parent="HBoxContainer/Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 1280.0
offset_bottom = 650.0

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Panel/Saves"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel/Saves/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(430, 0)
offset_left = 40.0
offset_top = 946.0
offset_right = 470.0
offset_bottom = 1017.0
size_flags_horizontal = 4
theme = ExtResource("4_myd3u")
text = "Back"
icon_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 510.0
offset_top = 946.0
offset_right = 1840.0
offset_bottom = 1017.0
theme = ExtResource("4_myd3u")
placeholder_text = "Enter save name"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
